support jdk11
Signed-off-by: pengzhile <pengzhile@gmail.com>